radware/yaniv/labs/day3-morningLab/deployments/service.yaml
kind: Service     
apiVersion: v1     
metadata:
  name: animals-bear #from RELEASE NAME
spec:
  selector:
    app: bear    
  ports:         
  - name: http   
    protocol: TCP
    port: 80
    targetPort: 80
---

kind: Service     
apiVersion: v1     
metadata:
  name: animals-moose #from RELEASE NAME
spec:
  selector:
    app: moose    
  ports:         
  - name: http   
    protocol: TCP
    port: 80
    targetPort: 80
